Début de GestionAffichage #5

--- a/project.conf
+++ b/project.conf
@@ -12,10 +12,6 @@
       <prop name="FragmentVersion" value="3.8.04" scope="LOCAL"/>
     </properties>
   </fragment>
-  <module name="ModelerModule" version="9.0.06" activated="true" scope="LOCAL">
-    <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
-    <properties></properties>
-  </module>
   <module name="JavaDesigner" version="3.8.01" archive="file:///C:/Users/Julien/.modelio/3.8/modules/JavaDesigner_3.8.01/JavaDesigner_3.8.01.jmdac" activated="true" scope="LOCAL">
     <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
     <properties>
@@ -34,6 +30,14 @@
       <prop name="JavahGenerationPath" value="$(Project)/src" scope="LOCAL"/>
       <prop name="RetrieveDefaultBehaviour" value="Ask" scope="LOCAL"/>
     </properties>
+  </module>
+  <module name="ModelerModule" version="9.0.06" activated="true" scope="LOCAL">
+    <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
+    <properties></properties>
+  </module>
+  <module name="WebModelPublisher" version="4.8.02" archive="file:///C:/Users/Julien/.modelio/3.8/modules/WebModelPublisher_4.8.02/WebModelPublisher_4.8.02.jmdac" activated="true" scope="LOCAL">
+    <auth scheme="AUTH_TYPE_ASK" scope="LOCAL"></auth>
+    <properties></properties>
   </module>
   <properties>
     <prop name="info.contact" value="" scope="LOCAL"/>
